force-app/main/default/objects/SFSSDupeCatcher__DcIn__c/fields/SFSSDupeCatcher__P1__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__P1__c</fullName>
    <label>P1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>