force-app/main/default/objects/SFSSDupeCatcher__DcIn__c/fields/SFSSDupeCatcher__P3__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__P3__c</fullName>
    <label>P3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>