force-app/main/default/objects/SFSSDupeCatcher__DcIn__c/fields/SFSSDupeCatcher__R1__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__R1__c</fullName>
    <label>R1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>