force-app/main/default/objects/SFSSDupeCatcher__DcIn__c/fields/SFSSDupeCatcher__stat__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__stat__c</fullName>
    <label>stat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>