force-app/main/default/objects/SFSSDupeCatcher__DcIn__c/fields/SFSSDupeCatcher__T1__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__T1__c</fullName>
    <label>T1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>