force-app/main/default/objects/SFSSDupeCatcher__DcIn__c/fields/SFSSDupeCatcher__wsm__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__wsm__c</fullName>
    <label>wsm</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>